[package]
name          = "empfindung"
description   = "Empfindung is a pure-Rust implementation of the CIEDE2000 colour difference"
version       = "0.2.5"
authors       = ["Elliot Jackson <elliotekj@gmail.com>",
                 "Michal Nazarewicz <mina86@mina86.com>"]
documentation = "https://docs.rs/empfindung"
homepage      = "https://github.com/mina86/empfindung"
repository    = "https://github.com/mina86/empfindung"
readme        = "README.md"
keywords      = ["delta", "CIE", "quantify", "color", "difference"]
categories    = ["algorithms", "multimedia::images", "graphics"]
license       = "MIT"
edition       = "2018"

[dependencies]
lab = { version = ">=0.7, <1.0", optional = true }
rgb = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.3.3", default-features = false }
rand = "0.8.0"
rand_xoshiro = "0.6.0"
lab = ">=0.7, <1.0"
rgb = "0.8"

[features]
default = ["lab", "rgb"]

[[bench]]
name = "diff"
harness = false
